--- a/_posts/0000-01-02-23anjana.md
+++ b/_posts/0000-01-02-23anjana.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"The future belongs to those who believe in the beauty of their dreams."
 Use the left arrow to go back!
 
